Update image position

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         }
 
         img {
-            width: 150px; /* Adjust the width as needed */
-            height: 150px; /* Adjust the height as needed */
-            border-radius: 50%; /* Makes the image circular */
+            width: 300px; /* Adjust the width as needed */
+            height: 200px; /* Adjust the height as needed */
+            border-radius: 10px; /* Adds a slight border-radius for a softer look */
             margin-top: 20px; /* Adjust the margin as needed */
+            float: left; /* Float the image to the left */
+            margin-right: 20px; /* Add some margin to separate the image from other content */
         }
 
         a {
